--- a/node/src/views/admin/pages/roles/permissions.pug
+++ b/node/src/views/admin/pages/roles/permissions.pug
@@ -2,180 +2,194 @@ extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 
 block main
-  +alertError(3000)
+  if(role.permissions.includes("roles_permissions"))
+    
+    +alertError(3000)
 
-  .container.mt-4
-    .card.shadow-lg.rounded-4.overflow-hidden
-      .bg-gradient-primary-to-secondary.py-4.mb-4.rounded.shadow
-        h1.mb-0.text-primary.text-center.font-weight-bold(style="text-shadow:2px 2px 8px #aaa;letter-spacing:2px;") 
-          i.fas.fa-list-alt.mr-2
-          | Phân quyền
+    .container.mt-4
+      .card.shadow-lg.rounded-4.overflow-hidden
+        .bg-gradient-primary-to-secondary.py-4.mb-4.rounded.shadow
+          h1.mb-0.text-primary.text-center.font-weight-bold(style="text-shadow:2px 2px 8px #aaa;letter-spacing:2px;") 
+            i.fas.fa-list-alt.mr-2
+            | Phân quyền
 
-        if(roles.length > 0)
-          div(data-records=roles)
-      
-      .card-body.p-4
-        .text-right.mb-4
-          button(
-            type="submit"
-            class="btn btn-danger btn-lg px-4"
-            button-submit
-          )
-            i.fas.fa-save.mr-2
-            | Cập nhật quyền
+          if(roles.length > 0)
+            div(data-records=roles)
         
-        .table-responsive
-          table(
-            class="table table-bordered table-striped table-hover"
-            id="table-permissions"
-            table-permissions
-          )
-            thead
-              tr.bg-light
-                th Tính năng
-                each role in roles
-                  th.text-center #{role.title}
-                             
-            tbody
-              tr(data-name="id")
-                td
-                each item in roles
-                  td.text-center.d-none
-                    input(type="text", value=item.id)
-              
-              tr.bg-light
-                td(colspan="3")
-                  b Danh mục sản phẩm
-              
-              tr(data-name="products-category_view")
-                td Xem
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+        .card-body.p-4
+          .text-right.mb-4
+            button(
+              type="submit"
+              class="btn btn-danger btn-lg px-4"
+              button-submit
+            )
+              i.fas.fa-save.mr-2
+              | Cập nhật quyền
+          
+          .table-responsive
+            table(
+              class="table table-bordered table-striped table-hover"
+              id="table-permissions"
+              table-permissions
+            )
+              thead
+                tr.bg-light
+                  th Tính năng
+                  each role in roles
+                    th.text-center #{role.title}
                               
-              tr(data-name="products-category_create")
-                td Thêm mới
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
-              
-              tr(data-name="products-category_edit")
-                td Sửa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
-              
-              tr(data-name="products-category_delete")
-                td Xóa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+              tbody
+                tr(data-name="id")
+                  td
+                  each item in roles
+                    td.text-center.d-none
+                      input(type="text", value=item.id)
+                
+                tr.bg-light
+                  td(colspan="3")
+                    b Danh mục sản phẩm
+                
+                tr(data-name="products-category_view")
+                  td Xem
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
+                                
+                tr(data-name="products-category_create")
+                  td Thêm mới
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
+                
+                tr(data-name="products-category_edit")
+                  td Sửa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
+                
+                tr(data-name="products-category_delete")
+                  td Xóa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              //- san pham
-              tr.bg-light
-                td(colspan="3")
-                  b Sản phẩm
-              
-              tr(data-name="products_view")
-                td Xem
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                //- san pham
+                tr.bg-light
+                  td(colspan="3")
+                    b Sản phẩm
+                
+                tr(data-name="products_view")
+                  td Xem
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="products_create")
-                td Thêm mới
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="products_create")
+                  td Thêm mới
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="products_edit")
-                td Sửa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="products_edit")
+                  td Sửa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="products_delete")
-                td Xóa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="products_delete")
+                  td Xóa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              //- nhom quyen
-              tr.bg-light
-                td(colspan="3")
-                  b Nhóm quyền
+                //- nhom quyen
+                tr.bg-light
+                  td(colspan="3")
+                    b Nhóm quyền
 
-              tr(data-name="roles_view")
-                td Xem
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="roles_view")
+                  td Xem
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="roles_create")
-                td Thêm mới
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="roles_create")
+                  td Thêm mới
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="roles_edit")
-                td Sửa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="roles_edit")
+                  td Sửa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="roles_delete")
-                td Xóa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
-                   
-              tr(data-name="roles_permissions")
-                td Phân quyền
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
-                    //- phan quyen
-              
-                    //- danh sach tai khoan
-              tr.bg-light
-                td(colspan="3")
-                  b Danh sách tài khoản
+                tr(data-name="roles_delete")
+                  td Xóa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
+                    
+                tr(data-name="roles_permissions")
+                  td Phân quyền
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
+                      //- phan quyen
+                
+                      //- danh sach tai khoan
+                
+                  //- tai khoan
+                tr.bg-light
+                  td(colspan="3")
+                    b Danh sách tài khoản
 
-              tr(data-name="accounts_view")
-                td Xem
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="accounts_view")
+                  td Xem
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="accounts_create")
-                td Thêm mới
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="accounts_create")
+                  td Thêm mới
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="accounts_edit")
-                td Sửa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="accounts_edit")
+                  td Sửa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-              tr(data-name="accounts_delete")
-                td Xóa
-                each role in roles
-                  td.text-center
-                    input(type="checkbox", class="form-check-input")
+                tr(data-name="accounts_delete")
+                  td Xóa
+                  each role in roles
+                    td.text-center
+                      input(type="checkbox", class="form-check-input")
 
-  form(
-    id="form-change-permissions"
-    method="POST"
-    action=`${prefixAdmin}/roles/permissions?_method=PATCH`
-  )
-    div(class="form-group")
-      input(
-        type="text"
-        class="form-control d-none"
-        name="permissions"
-      )
+    form(
+      id="form-change-permissions"
+      method="POST"
+      action=`${prefixAdmin}/roles/permissions?_method=PATCH`
+    )
+      div(class="form-group")
+        input(
+          type="text"
+          class="form-control d-none"
+          name="permissions"
+        )
 
-  script(src="/admin/js/roles.js")
-  script(src="/admin/js/script.js")
+    script(src="/admin/js/roles.js")
+    script(src="/admin/js/script.js")
+  else
+    .container.mt-4(style="background-color: #f8f9fa; border-radius: 10px; padding: 30px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);")
+      .text-center
+        svg(width="48" height="48" fill="currentColor" viewBox="0 0 16 16" style="color: #dc3545; margin-bottom: 20px;")
+          path(d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z")
+          path(d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z")
+        h1.text-danger Bạn không có quyền truy cập trang này!
+        p.text-muted Vui lòng liên hệ quản trị viên nếu bạn cần hỗ trợ.
+        a.btn.btn-primary.mt-3(href="/") Quay lại trang chủ
+       
