thêm các trang sản phẩm cho từng danh mục

--- a/node/src/views/clients/pages/home/index.pug
+++ b/node/src/views/clients/pages/home/index.pug
@@ -6,6 +6,6 @@ block main
   .container.my-3
     .row
       .col-12
-        +box-head("Sản phẩm nổi bật ")
+        +box-head(title)
     +products-layout(productsFeatured)
   
